src/test/deca/syntax/invalid/equals.deca
// Manque arguments

// Date: 20.01.2022

{
    =;
}